--- a/Selenium-Automation-Elearning-Framework-TestNG/resources/db.properties
+++ b/Selenium-Automation-Elearning-Framework-TestNG/resources/db.properties
@@ -1,5 +1,6 @@
-url=jdbc:mysql://localhost:3306/elearningdb
+#url=jdbc:mysql://localhost:3306/ibm_login
+url=jdbc:mysql://localhost:3306/Return_Products
 driver=com.mysql.jdbc.Driver
 username=root
 # you will choose at the time of installation 
-password=kanchan
+password=Welcome123!
