--- a/Selenium-Automation-Elearning-Framework-TestNG/resources/others.properties
+++ b/Selenium-Automation-Elearning-Framework-TestNG/resources/others.properties
@@ -1,6 +1,7 @@
 # domain working on 
 baseURL=http://retail.upskills.in/admin/
 
+baseURL1=http://retail.upskills.in/
 # implicit wait will be in seconds here 
 implicitWait=30
 
