--- a/Selenium-Automation-Elearning-Framework-TestNG/resources/sql.properties
+++ b/Selenium-Automation-Elearning-Framework-TestNG/resources/sql.properties
@@ -1,2 +1,3 @@
 # list of sql statements 
-get.logins=select username, password from login; 
+#get.logins=select username, password from login; 
+get.details=select OrderID, Customer, FirstName, LastName, Email, Phone, Product, Model from returnProducts;
